# rust-db-wrapper

./: .env  Cargo.toml  readme.md
src/: main.rs  queries.rs  repository.rs
src/models/: mod.rs  post_model.rs  product_model.rs
