[package]
name = "db-wrapper"
version = "0.1.0"
edition = "2021"

[dependencies]
bigdecimal = "0.4.1"
sqlx = { version = "0.8.2", features = ["mysql", "bigdecimal", "runtime-async-std-native-tls"] }
tokio = { version = "1", features = ["full"] }
thiserror = "1.0.64"
dotenv = "0.15.0"
log = "0.4.22"
fern = "0.7.0"
chrono = "0.4"
env_logger = "0.11.5"